removed some unnecessary whitespace from style.css
added and edited html meta data from auto fill from VScode

fixed the "stylesheet" link

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <! This is my first real attempt at producing a website, I have followed the FreeCodeCamps Responsive Web Desings stories for the structure of the code, any and all tips welcomed, thank you!> <!do list photos as polaroids with captions!><!use this link to create cool tape effect for taping images to page!><!don't foget to add hover windows for the info link!><!could try using the polaroid images as bullets with shorter captions and a description to the right!>
 <!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-  
+  <link href="CSS/style.css" rel="stylesheet">
   <title>Morzine-Avoriaz</title>
-  
-</head>  
+</head>
+
   <body id="main">
     
     <div id= "title">
