--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id= "title">
       <img id="img-div" src="https://lh3.googleusercontent.com/SieL1yWwvXGVs8nEKsSYQ9VcshmCj1RP2rzehPKhQmhIiuCuE0oEqAad70JeDGThY_mX40p3vx9t_F82ZsxDKDodlTYIVlLrwSaFwlJn5913pYYGKgRHlDwL1lGApigqxUnqF9Q5ViahBfBUBvSUV3jZZcYzF-BffiExI4c32SaGUxs8WAnHconLCcErD6GcWXySI7AY7_xuPOV0c4hvnMct5Bbjl5HteCf0j_B2AgpC-Pmsnh__VM9Iq5ivuIkDe-kRdE166VbS0VeLi67bJz6ZLQMY0J82eK7vC6ma-8CC-TxFw9butd9O7la85S3OerY8sj4C40jZih8jfwuZBRYTVOyw7k52TQTyoxvhFhDvmSjVdljumOdqGv5VRSfBdkQbpEIvlyde4NkzorX22NGJBTMMkWP5hXCAczqPt9-EMxde-K9mQT8YDnkl6UmVuZg0qf_xEwXuBX5ujKAuzMZZJh1Xa9CHMB_CyFfzzpk9wqdLaSLNsWCb7DQ1pNRIQ_aU0j1I01W-iCvnqrlyO4TEAFgb0xgdnr8RNiud9GFO6iAByvYyWHWXFxjg9Vsk2_FseqaQ8IYWmYHXwsSJHK9iuxGcqRq_D6vsv6-elm79H4_RE0Klq2vjen25kckYBDeIKgcvB7LHA1FF8tobbI95UG0tJURY_pqXUv88TnG0Y-8m7gFJGMlUOwHD3Q=w624-h251-no?authuser=0" alt= "masking-tape-image">
     </div>        
-      <div class= "centered"><h1 style="font-size:4vw;">Morzine-Avoriaz</h1>      
+      <div id= "centered"><h1 style="font-size:4vw;">Morzine-Avoriaz</h1>      
         <p style="font-size:2vw;">The town that changed my life</p>          
       </div>
     </div>
