index.html *added and deleted commented out notes *think I've finally resolved the title image responsiveness *changed title paragraph to h2 for better responsiveness *title font size larger *change first h2 element to h3 and added more text
style.css
*modified for title image responsiveness

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<! This is my first real attempt at producing a website, I have followed the FreeCodeCamps Responsive Web Desings stories for the structure of the code, any and all tips welcomed, thank you!> <!do list photos as polaroids with captions!><!use this link to create cool tape effect for taping images to page!><!don't foget to add hover windows for the info link!><!could try using the polaroid images as bullets with shorter captions and a description to the right!>
+<! This is my first real attempt at producing a website, I have followed the FreeCodeCamps Responsive Web Desings stories for the structure of the code, any and all tips welcomed, thank you!><!not even sure I like the scrap book idea now!><!use this link to create cool tape effect for taping images to page!><!don't foget to add hover windows for the info link!>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,17 +13,16 @@
 
   <body id="main">
     
-    <div id= "title">
-      <img id="img-div" src="https://lh3.googleusercontent.com/SieL1yWwvXGVs8nEKsSYQ9VcshmCj1RP2rzehPKhQmhIiuCuE0oEqAad70JeDGThY_mX40p3vx9t_F82ZsxDKDodlTYIVlLrwSaFwlJn5913pYYGKgRHlDwL1lGApigqxUnqF9Q5ViahBfBUBvSUV3jZZcYzF-BffiExI4c32SaGUxs8WAnHconLCcErD6GcWXySI7AY7_xuPOV0c4hvnMct5Bbjl5HteCf0j_B2AgpC-Pmsnh__VM9Iq5ivuIkDe-kRdE166VbS0VeLi67bJz6ZLQMY0J82eK7vC6ma-8CC-TxFw9butd9O7la85S3OerY8sj4C40jZih8jfwuZBRYTVOyw7k52TQTyoxvhFhDvmSjVdljumOdqGv5VRSfBdkQbpEIvlyde4NkzorX22NGJBTMMkWP5hXCAczqPt9-EMxde-K9mQT8YDnkl6UmVuZg0qf_xEwXuBX5ujKAuzMZZJh1Xa9CHMB_CyFfzzpk9wqdLaSLNsWCb7DQ1pNRIQ_aU0j1I01W-iCvnqrlyO4TEAFgb0xgdnr8RNiud9GFO6iAByvYyWHWXFxjg9Vsk2_FseqaQ8IYWmYHXwsSJHK9iuxGcqRq_D6vsv6-elm79H4_RE0Klq2vjen25kckYBDeIKgcvB7LHA1FF8tobbI95UG0tJURY_pqXUv88TnG0Y-8m7gFJGMlUOwHD3Q=w624-h251-no?authuser=0" alt= "masking-tape-image">
-    </div>        
-      <div id= "centered"><h1 style="font-size:4vw;">Morzine-Avoriaz</h1>      
-        <p style="font-size:2vw;">The town that changed my life</p>          
-      </div>
+    <div class="wrapper">
+      <div class="divimage"></div>
+      <div class="divtext"><h1 style="font-size: 5vw; margin: auto;" >Morzine-Avoriaz</h1></div>
     </div>
+
+    <h2 style="font-size: 2vw;">A tribute to a one of a kind ski resort town</h2>
+
+    <img class="main-images" src="https://lh3.googleusercontent.com/6RPyT7dxhil-iNZ1XLKHCboYJwf5ERunoFUrycb6ue4N60MYUF3rlfgLDke42xZu_UQpI3MJ6BBgPtMwhJHLr41NZ_Kti7ugnChwa4MIH8XhMtehGD7GcaenADyxZsDYVRCtGrSEOFkVBhkUkegQGv2Eo9L4DmX_DNxk_FkzxgLzMXAcZJGjN-o3GstpACDnEE6ocFu8Wcu3CMfWS07PTFM8FJ5-FKFp3N0qRjUIBvqDrGOnOcKRUAKN76meukYaSYxNlWYRPuVUZ7Q7AOrpDXzcZ8x3EFcJP9YydivGtHvhNtnCwlQZD8j5eqrvxArdnv2fwZ4bYpZrGRC_zMUWtqH_b_jTVlsf9PFh3AU2VpbUI1eZsrwcxNc5-YUo7LLScPYCfZMv_ZQpNWQFo2oKSn-eOHBMLdSwm-L_uMBxRcc_4d7hYxV-YIMpTeAxpDyGQiE3dSqkY0l82HRRfhpluEd-a7bUOIxwy0DP9oknS6DMs28UC9jEK1tHorYaXnkaiaatbjBnBXxdEAYNRqPyaAGjU3ic3dlHayCVocym5Ox3tET-Lbe0xbREUEYcXfjqbXnhJKWwur_oIgv6czS3Rg3sklxdsrXB_ckkQJTpRreFvLgWk8bmpi09_Jm_166X2vR1tk688Rua__riYTelC7tCBnjf7DuFjhQIRCqLmXw-D9DKHU0_p5uEVoJYVQ=w1280-h348-no?authuser=0" width= 75% alt="getting ready to ride the off-piste line called Satellites">
   
-  <img class="main-images" src="https://lh3.googleusercontent.com/6RPyT7dxhil-iNZ1XLKHCboYJwf5ERunoFUrycb6ue4N60MYUF3rlfgLDke42xZu_UQpI3MJ6BBgPtMwhJHLr41NZ_Kti7ugnChwa4MIH8XhMtehGD7GcaenADyxZsDYVRCtGrSEOFkVBhkUkegQGv2Eo9L4DmX_DNxk_FkzxgLzMXAcZJGjN-o3GstpACDnEE6ocFu8Wcu3CMfWS07PTFM8FJ5-FKFp3N0qRjUIBvqDrGOnOcKRUAKN76meukYaSYxNlWYRPuVUZ7Q7AOrpDXzcZ8x3EFcJP9YydivGtHvhNtnCwlQZD8j5eqrvxArdnv2fwZ4bYpZrGRC_zMUWtqH_b_jTVlsf9PFh3AU2VpbUI1eZsrwcxNc5-YUo7LLScPYCfZMv_ZQpNWQFo2oKSn-eOHBMLdSwm-L_uMBxRcc_4d7hYxV-YIMpTeAxpDyGQiE3dSqkY0l82HRRfhpluEd-a7bUOIxwy0DP9oknS6DMs28UC9jEK1tHorYaXnkaiaatbjBnBXxdEAYNRqPyaAGjU3ic3dlHayCVocym5Ox3tET-Lbe0xbREUEYcXfjqbXnhJKWwur_oIgv6czS3Rg3sklxdsrXB_ckkQJTpRreFvLgWk8bmpi09_Jm_166X2vR1tk688Rua__riYTelC7tCBnjf7DuFjhQIRCqLmXw-D9DKHU0_p5uEVoJYVQ=w1280-h348-no?authuser=0" width= 75% alt="getting ready to ride the off-piste line called Satellites">
-  
-  <h2>This awesome town and its wonderful inhabitants have changed how I view my life and what I would like to do with it. Morzine and its people have inspired me to make myself happier. It wasn't until I arrived in Morzine I realised how much more I was missing out on around the world. Having always dreamt of more and believing it to be out of my reach the inspiring people, geography and towns have shown me what can be done with a little hard work and determination. This is why my first project on the road to becoming a digital nomad (the dream) should definitely be about Morzine!</h2>
+  <h3>These awesome twin resort towns and their wonderful inhabitants have changed how I view my life and how I would like to live it. Morzine and its people have inspired me to make myself happier. It wasn't until I arrived in Morzine I realised how much more I was missing out on around the world. Having always dreamt there could be more outside of the grey Northern English mill town I grew up in. Believing it to be out of my reach these inspiring people, the daunting geography and the two very different but equally brilliant towns have shown me what can be done with a little hard work and determination. This is why my first project on the road to becoming a digital nomad (the dream) should I think definitely be a tribute to Morzine!</h3>
     
     <img class="main-images" src="https://lh3.googleusercontent.com/4-QfTKinVS4XshJTzcqWms7O-1z-29SNCBqTeii_TafWV9TWdNWnqMBMwUsVAs4zLxJodMy1x5hpkIYCEmJS1eoSVtim0An2xO2IQOh-oYPGnLn-Tzu43EgyNc189ijZJ-Hewki3tkoNBqKYjt87F8GWz6T2a9fxoviEjHN3tGfLu9mbDIRmpc9Prdxdc678ZXgSM7w33yU-GDJSXXJ3BNgmtZ9SYad7cyrR2sm1VUWq3WiCahfagJ1_TFib1vH2nBcHkHERQnghKeu-QHRc-DN9luseuWKAagdbCjspclVAiliG8nmK1SkgCsF4hPsLHvxhlFQQuIme-5zwB_axBnqsMjkWdwxXj_CRIduStSCwCKhWN4G0WSHjhUm974gXb4WwAAe1IMhAQyb_fbuDA0z6QIae1r56XlQkAsE7cH83HBvNarLs0dgzzW0h1YEYsPULRfLgQUbG1OXqYBqrt_7TOPdtFqtRWNdvIO8DFN7orEIcFaDXyVU_M9rpy92foSOmCTnDazf1wPRDUiU4kfBquFM4FCrIbRvGeW-8RSL7DEh3OiJDMyJfOVFl9EB-MwkWSiGndyypFadtAfzxSfSicesVRPRyrupxGlxPKUPew7KhF4DP1qGE0_1bamNAjcapPMHvaZEao0di1yZC17zEihNrnQwqcoQIdAUnI-pqVRIOr03Z6698fGO6gQ=w1280-h463-no?authuser=0" alt="a snowy overview with Morzine in the background" width=75% alt="snowy overview of the swiss wall">
 
