Changes to pass the test suite.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
       <div class="divtext"><h1 style="font-size: 5vw; margin: auto;">Morzine-Avoriaz</h1></div>
     </div>
 
-    <h2>The town that changed my life</h2>
+    <h2 id="tribute-info">The town that changed my life</h2>
 
-    <img class="main-images" src="https://lh3.googleusercontent.com/6RPyT7dxhil-iNZ1XLKHCboYJwf5ERunoFUrycb6ue4N60MYUF3rlfgLDke42xZu_UQpI3MJ6BBgPtMwhJHLr41NZ_Kti7ugnChwa4MIH8XhMtehGD7GcaenADyxZsDYVRCtGrSEOFkVBhkUkegQGv2Eo9L4DmX_DNxk_FkzxgLzMXAcZJGjN-o3GstpACDnEE6ocFu8Wcu3CMfWS07PTFM8FJ5-FKFp3N0qRjUIBvqDrGOnOcKRUAKN76meukYaSYxNlWYRPuVUZ7Q7AOrpDXzcZ8x3EFcJP9YydivGtHvhNtnCwlQZD8j5eqrvxArdnv2fwZ4bYpZrGRC_zMUWtqH_b_jTVlsf9PFh3AU2VpbUI1eZsrwcxNc5-YUo7LLScPYCfZMv_ZQpNWQFo2oKSn-eOHBMLdSwm-L_uMBxRcc_4d7hYxV-YIMpTeAxpDyGQiE3dSqkY0l82HRRfhpluEd-a7bUOIxwy0DP9oknS6DMs28UC9jEK1tHorYaXnkaiaatbjBnBXxdEAYNRqPyaAGjU3ic3dlHayCVocym5Ox3tET-Lbe0xbREUEYcXfjqbXnhJKWwur_oIgv6czS3Rg3sklxdsrXB_ckkQJTpRreFvLgWk8bmpi09_Jm_166X2vR1tk688Rua__riYTelC7tCBnjf7DuFjhQIRCqLmXw-D9DKHU0_p5uEVoJYVQ=w1280-h348-no?authuser=0"  alt="getting ready to ride the off-piste line called Satellites">
+    <div id="img-div">
+      <img id="image" src="https://lh3.googleusercontent.com/6RPyT7dxhil-iNZ1XLKHCboYJwf5ERunoFUrycb6ue4N60MYUF3rlfgLDke42xZu_UQpI3MJ6BBgPtMwhJHLr41NZ_Kti7ugnChwa4MIH8XhMtehGD7GcaenADyxZsDYVRCtGrSEOFkVBhkUkegQGv2Eo9L4DmX_DNxk_FkzxgLzMXAcZJGjN-o3GstpACDnEE6ocFu8Wcu3CMfWS07PTFM8FJ5-FKFp3N0qRjUIBvqDrGOnOcKRUAKN76meukYaSYxNlWYRPuVUZ7Q7AOrpDXzcZ8x3EFcJP9YydivGtHvhNtnCwlQZD8j5eqrvxArdnv2fwZ4bYpZrGRC_zMUWtqH_b_jTVlsf9PFh3AU2VpbUI1eZsrwcxNc5-YUo7LLScPYCfZMv_ZQpNWQFo2oKSn-eOHBMLdSwm-L_uMBxRcc_4d7hYxV-YIMpTeAxpDyGQiE3dSqkY0l82HRRfhpluEd-a7bUOIxwy0DP9oknS6DMs28UC9jEK1tHorYaXnkaiaatbjBnBXxdEAYNRqPyaAGjU3ic3dlHayCVocym5Ox3tET-Lbe0xbREUEYcXfjqbXnhJKWwur_oIgv6czS3Rg3sklxdsrXB_ckkQJTpRreFvLgWk8bmpi09_Jm_166X2vR1tk688Rua__riYTelC7tCBnjf7DuFjhQIRCqLmXw-D9DKHU0_p5uEVoJYVQ=w1280-h348-no?authuser=0"  alt="getting ready to ride the off-piste line called Satellites">
+      <figcaption id="img-caption">Getting ready to "drop in" to Satellites</figcaption>
+    </div>
 
     <h3>These awesome twin resort towns and their wonderful inhabitants have changed how I view my life and how I would like to live it. Morzine and its people have inspired me to make myself happier. It wasn't until I arrived in Morzine I realised how much more I was missing out on around the world. Having always dreamt there could be more outside of the grey Northern English mill town I grew up in. Believing it to be out of my reach these inspiring people, the daunting geography and the two very different but equally brilliant towns have shown me what can be done with a little hard work and determination. This is why my first project on the road to becoming a digital nomad (the dream) should I think definitely be a tribute to Morzine! I would like to continue with a brief timeline of how Morzine has become the incredible town it is today, a town that can inspire you!</h3>
     
@@ -92,7 +95,7 @@
 
 <h4>Morzine has inspired me to become a digital nomad, to earn money whilst I am traveling, finding new amazing peope and places. Morzine seems worlds away from my hometown, a grim Northern England ex mill town.</h4>
 
-<h4>Morzine has strived to keep its typical Savoyard character and culture, whilst also opening its doors to the tourist industry. The Savoyard strength, warmth and character is passed down from generation to generation. Morzine's true Savoyard culture has also preserved its agro-pastoral way of life, serving up typical tasty traditional Haute Savoyarde meals, mountain traditions and patois still spoken by real Morzinois. For more information please click this <a href="https://en.morzine-avoriaz.com/heritage.html">link</a></h4>
+<h4>Morzine has strived to keep its typical Savoyard character and culture, whilst also opening its doors to the tourist industry. The Savoyard strength, warmth and character is passed down from generation to generation. Morzine's true Savoyard culture has also preserved its agro-pastoral way of life, serving up typical tasty traditional Haute Savoyarde meals, mountain traditions and patois still spoken by real Morzinois. For more information please click this <a id="tribute-link" href="https://en.morzine-avoriaz.com/heritage.html" target="_blank">link</a></h4>
   
   <h4>I would like to thank and credit the following websites and creators for use of their content, any issues please get in touch with Bonappcode <a href="mailto:bonappcode@gmail.com">here</a></h4>
     <ul>
